Revert "set cpu affinity to increase cache + dump down params"
This reverts commit e78ac82439f05193c195ab932c1e6a37f278f249.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -128,7 +128,8 @@ services:
         hard: 1000000
     networks:
       - backend
-    cpuset: "0"
+    cpuset: "1"
+    cpu_shares: 2048
     deploy:
       resources:
         limits:
