--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 x-enviromments: &x-enviromments
-  - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
+  - AMQP_URL: "/dev/shm/lavinmq.sock"
   - PREFETCH_COUNT: "0"
   - SHARD_COUNT: "1"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
@@ -83,12 +83,15 @@ services:
   lavinmq:
     image: cloudamqp/lavinmq:latest
     container_name: lavinmq
+    ipc: host
     healthcheck:
       test: ["CMD", "lavinmqctl", "status"]
       interval: 5s
       timeout: 10s
       retries: 20
       start_period: 5s
+    volumes:
+      - ./lavinmq.ini:/etc/lavinmq/lavinmq.ini:ro
     ports:
       - "5672:5672"
       - "15672:15672"
