--- a/.github/workflows/update-submission.yaml
+++ b/.github/workflows/update-submission.yaml
@@ -95,9 +95,11 @@ jobs:
             mkdir -p participantes/luucaspole-crystal
           fi
           
-          # Copy current docker-compose.yaml and nginx.conf from current repo to fork
+          # Copy current docker-compose.yaml, nginx.conf and lavinmq.ini from current repo to fork
           cp ../docker-compose.yaml participantes/luucaspole-crystal/docker-compose.yaml
-          echo "📝 Updated docker-compose.yaml and nginx.conf in participantes/luucaspole-crystal/"
+          cp ../lavinmq.ini participantes/luucaspole-crystal/lavinmq.ini
+          cp ../nginx.conf participantes/luucaspole-crystal/nginx.conf
+          echo "📝 Updated docker-compose.yaml, nginx.conf and lavinmq.ini in participantes/luucaspole-crystal/"
 
       - name: Remove build sections from docker-compose
         run: |
