--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,10 +85,12 @@ services:
     container_name: lavinmq
     healthcheck:
       test: ["CMD", "lavinmqctl", "status"]
-      interval: 5s
+      interval: 10s
       timeout: 10s
-      retries: 20
+      retries: 5
       start_period: 5s
+    volumes:
+      - ./lavinmq.ini:/etc/lavinmq/lavinmq.ini:ro
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -102,15 +104,11 @@ services:
         reservations:
           cpus: '0.1'
           memory: '35MB'
-  pingora: # Pingora Load Balancer
-    image: docker.io/lukas8219/rinha-de-backend-2025-load-balancer-pingora:pingora-0b7f83e5a-1753557406
-    build:
-      context: .
-      dockerfile: Dockerfile.pingora
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     user: "1001:1001"
     ipc: host
-    environment:
-      PORT: "9999"
     depends_on:
       - app1
       - app2
@@ -125,8 +123,6 @@ services:
         hard: 1000000
     networks:
       - backend
-    cpu_shares: 2048
-    cpuset: "2"
     deploy:
       resources:
         limits:
@@ -135,6 +131,31 @@ services:
         reservations:
           cpus: '0.1'
           memory: '55MB'
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - nginx_cache:/var/cache/nginx
+      - nginx_run:/var/run
+      - nginx_log:/var/log/nginx
+
+volumes:
+  nginx_cache:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_run:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_log:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
 networks:
   backend:
     driver: bridge
