--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 x-enviromments: &x-enviromments
-  - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
+  - AMQP_URL: "amqp://guest:guest@lavinmq:5672/?tcp_nodelay=true"
   - PREFETCH_COUNT: "0"
   - SHARD_COUNT: "1"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
@@ -38,7 +38,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.20'
+          cpus: '0.1'
           memory: '40MB'
   app2:
     <<: *app
@@ -99,10 +99,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.1'
+          cpus: '0.3'
           memory: '35MB'
         reservations:
-          cpus: '0.1'
+          cpus: '0.3'
           memory: '35MB'
   nginx:
     image: nginx:latest
