--- a/lavinmq.ini
+++ b/lavinmq.ini
@@ -4,7 +4,7 @@ tcp_send_buffer_size = 2048
 tcp_recv_buffer_size = 2048
 stats_interval = 999999
 
-log_level = none
+log_level = debug
 
 [amqp]
 unix_path = /dev/shm/lavinmq.sock
